# tf-mandelrust

./: .terraform.lock.hcl  build.sh  main.tf
resources/: Cargo.toml
resources/.cargo/: config.toml
resources/src/: encode.rs  main.rs  render.rs
